# openstat

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: deploy-hetzner.yml
apps/backend/: .env.example  Dockerfile  package.json  tsconfig.json  tsconfig.test.json
apps/backend/src/: api-key-cache.ts  app.ts  auth-scope.ts  auth.test.ts  auth.ts  context.ts  ingestion-redis.test.ts  ingestion.integration.test.ts  project-refresh-events.test.ts  project-refresh-events.ts  redis-rate-limit-store.ts  redis-telemetry.ts  schemas.test.ts  sentry.ts  server.ts  worker.ts
apps/backend/src/config/: env.ts
apps/docs/: .env.example  README.md  package.json
apps/docs/scripts/: sync-gitbook-openapi.mjs
apps/web/: .env.example  README.md  next.config.js  package.json  sentry-scrub.ts  sentry.client.config.ts  sentry.server.config.ts  vercel.json
apps/web/app/: auth-form.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  sign-in-modal.tsx
apps/web/lib/: openstat-api.ts
deploy/hetzner/: .env.example  Caddyfile  LAUNCH_CHECKLIST.md  OPERATIONS.md  README.md  docker-compose.yml
deploy/hetzner/scripts/: backup-postgres.sh  check-openstat.sh  restore-postgres.sh
docs/plans/: openstat-dashboard-tasklist.md  openstat-implementation-tasklist.md  openstat-production-readiness-plan.md  openstat-system-design.md
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: trading_agent.py
sdks/python/src/openstat/: __init__.py  client.py
sdks/python/tests/: test_client.py
(+58 files in other folders)
