[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openstat"
version = "0.0.0"
description = "OpenStat SDK for AI trading agent telemetry"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
